@startuml inventory-domain-foundation
title QualiTrack Inventory - Frontend layers
allowmixing
skinparam shadowing false
package "inventory.presentation" {
  component "inventory-routes" as Routes
  component "views/inventory-catalogue" as Catalogue
  component "views/inventory-detail" as Detail
  component "views/register-material" as Registration
}
package "inventory.application" {
  component InventoryStore
  component ReceiptConsumptionStore
  component RawMaterialBatchConsumption
}
package "inventory.domain.model" {
  class RawMaterial
  class RawMaterialBatch
  class InventoryMovement
  interface AvailableReceipt
  component "Typed commands" as Commands
}
package "inventory.infrastructure" {
  component InventoryApi
  component "Material / Receipt / Movement API endpoints" as Endpoints
  component "LegacyInventoryApiEndpoint (read/import)" as Legacy
  component "Resources / responses / requests" as Resources
  component "Assemblers" as Assemblers
}
package "shared" {
  interface BaseEntity
  class BaseApi
  class BaseApiEndpoint
  interface BaseAssembler
  interface BaseResource
  interface BaseResponse
  component "Layout / quantity validator" as SharedUI
}
Routes --> Catalogue
Routes --> Detail
Routes --> Registration
Registration --> InventoryStore
Registration --> SharedUI
Catalogue --> InventoryStore
Detail --> InventoryStore
Catalogue --> SharedUI
Detail --> SharedUI
component "Batch raw-material-usage view" as Batch
Batch --> ReceiptConsumptionStore
InventoryStore --> InventoryApi
ReceiptConsumptionStore --> InventoryApi
ReceiptConsumptionStore --> Commands
InventoryApi --|> BaseApi
InventoryApi --> Endpoints
InventoryApi --> Legacy
Endpoints --|> BaseApiEndpoint
Endpoints --> Assemblers
Endpoints --> Resources
Endpoints ..> RawMaterialBatchConsumption : mapped command result
Assemblers ..|> BaseAssembler
Resources --> BaseResource
Resources --> BaseResponse
RawMaterial ..|> BaseEntity
RawMaterialBatch ..|> BaseEntity
InventoryMovement ..|> BaseEntity
AvailableReceipt ..|> BaseEntity
Assemblers --> RawMaterial
Assemblers --> RawMaterialBatch
Assemblers --> InventoryMovement
note bottom of ReceiptConsumptionStore
  Select a released receipt, not an independent material balance.
  Keep operationId for retries; refresh authoritative stock after writes.
  No client-side stock deductions or fabricated data.
end note
note bottom of InventoryStore
  Catalogue, receipt review, movements and legacy history.
  HTTP and request coordination remain outside presentation.
  Backend enforces tenant, stock, unit, date and review rules.
end note
@enduml
